[tool.poetry]
authors = ["Johannes Filter <hi@jfilter.de>"]
description = ""
name = "btw17"
version = "0.1.0"

[tool.poetry.dependencies]
jupyterlab = "*"
matplotlib = "^3.4.3"
pandas = "^1.3.3"
python = "^3.9"
spacy = "^2"
spacy-iwnlp = "^0.0.2"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
